tests/neg/symbolic-packages.check
-- Error: tests/neg/symbolic-packages.scala:3:8 ------------------------------------------------------------------------
3 |package `with spaces` { // error
  |        ^^^^^^^^^^^^^
  |        The package name `with spaces` will be encoded on the classpath, and can lead to undefined behaviour.
-- Error: tests/neg/symbolic-packages.scala:7:10 -----------------------------------------------------------------------
7 |package +.* { // error // error
  |          ^
  |          The package name `*` will be encoded on the classpath, and can lead to undefined behaviour.
-- Error: tests/neg/symbolic-packages.scala:7:8 ------------------------------------------------------------------------
7 |package +.* { // error // error
  |        ^
  |        The package name `+` will be encoded on the classpath, and can lead to undefined behaviour.
-- Error: tests/neg/symbolic-packages.scala:11:16 ----------------------------------------------------------------------
11 |package object `mixed_*` { // error
   |                ^^^^^^^
   |               The package name `mixed_*` will be encoded on the classpath, and can lead to undefined behaviour.
